# camara-deputados

./: README.md  SKILL.md  camara_client.py  pyproject.toml  test_manual.py
.github/workflows/: publish-clawhub.yml
scripts/: camara.py
tests/: conftest.py
tests/integration/: test_camara_integration.py
tests/unit/: test_camara_client.py
