[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "camara-deputados"
version = "1.0.0"
description = "Cliente assíncrono para a API de Dados Abertos da Câmara dos Deputados"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "olegantonov"}]
keywords = ["câmara", "deputados", "api", "brasil", "dados-abertos"]

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 120
